# cat_lib

./: .gitignore  CMakeLists.txt  LICENSE  run-msbuild.bat
doc/: CMakeLists.txt  build.py  index.md
include/cat_lib/: ringbuffer.hpp
include/catlib/: core.h  ringbuffer.hpp
support/cmake/: catlib.pc.in  cxx17.cmake
test/: CMakeLists.txt  test-main.cc
test/cat_lib_test/: CMakeLists.txt  ringbuffer_test.cc
test/catlib_test/: CMakeLists.txt  ringbuffer_test.cc
